# cassie

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  GitVersion.yml  LICENSE  README.md  compose.yml  todo.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  containers.yml  version.yml
benches/: tier1_hotpath_bm25.rs  tier1_hotpath_filter_projection.rs  tier1_hotpath_keys.rs  tier1_hotpath_pgwire.rs  tier1_hotpath_pgwire_json.rs  tier1_hotpath_predicates.rs  tier1_hotpath_row_codec.rs  tier1_hotpath_search_vector.rs  tier1_hotpath_topk.rs  tier1_hotpath_vector_distance.rs  tier2_subsystem_binder.rs  tier2_subsystem_executor.rs  tier2_subsystem_hybrid.rs  tier2_subsystem_ingest.rs  tier2_subsystem_parser.rs  tier2_subsystem_plan_cache.rs  tier2_subsystem_protocol_handlers.rs  tier2_subsystem_search.rs  tier2_subsystem_sql_planning.rs  tier2_subsystem_vector.rs  tier3_system_concurrency.rs  tier3_system_mixed_load.rs  tier3_system_query.rs  tier3_system_query_breakdown.rs  tier3_system_rebuild.rs  tier3_system_startup.rs  tier4_integration_http.rs  tier4_integration_pgwire.rs  tier4_integration_protocol_compare.rs  tier5_scaling_lifecycle.rs  tier5_scaling_query.rs  tier5_scaling_retrieval.rs  tier5_scaling_transport.rs  tier6_soak_mixed.rs  tier6_soak_transport.rs
benches/support/: criterion_config.rs  performance_benchmark_catalog.rs  performance_benchmark_catalog_tier1.rs  performance_benchmark_catalog_tier2.rs  performance_benchmark_catalog_tier3.rs  performance_benchmark_catalog_tier4.rs  performance_benchmark_catalog_tier5.rs  performance_benchmark_catalog_tier5_legacy.rs  performance_benchmark_catalog_tier6.rs  performance_benchmark_core_scenarios.rs  performance_benchmark_placeholders.rs  performance_benchmark_profiles.rs  performance_benchmark_rebuild_scenarios.rs  performance_benchmark_samples.rs  performance_benchmark_scenarios.rs  performance_benchmark_search_scenarios.rs  performance_benchmark_transport_scenarios.rs  performance_benchmark_types.rs  performance_benchmark_vector_scenarios.rs  performance_benchmarks.rs  stress.rs  stress_config.rs  stress_evidence.rs  stress_runtime_contract.rs  transport_external.rs  workloads.rs
docs/: README.md  architecture-diagrams.md  bench-design.md  capacity-management.md  database-families.md  database-jargon-glossary.md  definition-of-done.md  experimental-promotion-criteria.md  feature-ownership.md  feature-support.md  index_constraint_roadmap.md  indexes-and-constraints.md  milestones.md  module-organization.md  module_organization.md  operational-scale.md  performance-contracts.md  performance-rebaseline-phase-10.md  poc-quickstart.md  postgres-compatibility.md  product-roadmap.md  production-readiness.md  projection-repair-runbook.md  projection-replay-contracts.md  read-model-autopilot-plan.md  read-model-gap-analysis.md  snapshot-restore.md  storage-design.md
docs/roadmap/: README.md  sprint-01.md  sprint-02.md  sprint-03.md  sprint-04.md  sprint-05.md  sprint-06.md  sprint-07.md  sprint-08.md  sprint-09.md  sprint-10.md  sprint-12.md  sprint-13.md  sprint-14.md  sprint-15.md  sprint-16.md  sprint-17.md  sprint-18.md  sprint-19.md  sprint-20.md  sprint-21.md  sprint-22.md  sprint-23.md  sprint-24.md  sprint-25.md  sprint-26.md  sprint-27.md  sprint-28.md  sprint-30.md  sprint-31.md  sprint-32.md  sprint-33.md  sprint-34.md  sprint-36.md  sprint-37.md  sprint-38.md  sprint-39.md  sprint-40.md  sprint-41.md  sprint-42.md  (+2 more)
examples/: poc_read_model.rs
issues/: issue-000.md  issue-001.md  issue-002.md  issue-003.md  issue-004.md  issue-005.md  issue-006.md  issue-007.md  issue-008.md  issue-009.md  issue-010.md  issue-011.md  issue-012.md  issue-013.md  issue-014.md  issue-015.md  issue-016.md  issue-017.md  issue-018.md  issue-019.md  issue-020.md  issue-021.md  issue-022.md  issue-023.md  issue-024.md  issue-025.md  issue-026.md  issue-027.md  issue-028.md  issue-029.md  issue-030.md  issue-031.md  issue-032.md  issue-033.md  issue-034.md  issue-035.md  issue-036.md  issue-037.md  issue-038.md  issue-039.md  (+107 more)
issues/phase-00/: issue-01.md
issues/phase-01/: issue-01.md  issue-02.md  issue-03.md  issue-04.md  issue-05.md
issues/phase-02/: issue-01.md  issue-02.md  issue-03.md  issue-04.md  issue-05.md  issue-06.md  issue-07.md  issue-08.md
issues/phase-03/: issue-01.md  issue-02.md  issue-03.md  issue-04.md  issue-05.md  issue-06.md  issue-07.md  issue-08.md  issue-09.md  issue-10.md  issue-11.md  issue-12.md  issue-13.md
issues/phase-04/: README.md  issue-01.md  issue-02.md  issue-03.md  issue-04.md  issue-05.md  issue-06.md  issue-07.md
issues/phase-05/: README.md  issue-01.md  issue-02.md  issue-03.md  issue-04.md  issue-05.md  issue-06.md
public/: openapi.yml
src/: app.rs  bench.rs  benchmark.rs  config.rs  lib.rs  main.rs  query_cache.rs  runtime.rs  transport.rs
src/app/: access.rs  (+40 more)
tests/: admission_control.rs  aggregate_acceleration.rs  analytical_projection_recovery.rs  analytical_projections.rs  application_pipeline_schema.rs  auth.rs  bench.rs  benchmark_evidence_contract.rs  benchmark_harness_contract.rs  benchmark_join_fixture.rs  benchmark_kernels.rs  benchmark_soak_contract.rs  benchmark_sql_contract.rs  bootstrap_credential_rotation.rs  cardinality_generation.rs  cardinality_incremental.rs  catalog_introspection.rs  catalog_introspection_foreign_keys.rs  catalog_introspection_pgadmin.rs  catalog_orm_metadata.rs  catalog_probes.rs  column_batch_controls.rs  column_batch_resilience.rs  column_batches.rs  compatibility_matrix.rs  compatibility_sqlalchemy.rs  database_connect_grants.rs  database_connect_network.rs  database_images.rs  database_scope.rs  derived_state_recovery.rs  dml_statement_atomicity.rs  documentation_contracts.rs  embedding_local.rs  embedding_provider_controls.rs  embedding_response_limits.rs  embedding_self_hosted.rs  embedding_validation.rs  execution_result_cache.rs  executor.rs  (+191 more)
ui/: .oxfmtignore  index.html  package-lock.json  package.json  playwright.config.ts  playwright.mock.config.ts  tsconfig.json  vite.config.ts
(+539 files in other folders)
