[package]
name = "cassie"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.12"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
thiserror = "2.0"
uuid = { version = "1.23", features = ["v4", "serde"] }
cntryl-midge = { package = "cntryl-midge", git = "https://github.com/cntryl/midge", rev = "df7c8583bb7d3a5cb23cc536b86386d77b74ffb9" }
cntryl-lexkey = { package = "cntryl-lexkey", git = "https://github.com/cntryl/lexkey-rs", rev = "9e75be255d73261b88dfd1d273a55fb9eb177e40" }
hyper = { version = "1.10", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "blocking", "json"] }
argon2 = "0.5"
time = { version = "0.3", features = ["formatting", "parsing"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_futures"] }
tokio-postgres = "0.7"

[[bench]]
name = "tier1_hotpath_row_codec"
harness = false
path = "benches/tier1_hotpath_row_codec.rs"

[[bench]]
name = "tier1_hotpath_keys"
harness = false
path = "benches/tier1_hotpath_keys.rs"

[[bench]]
name = "tier1_hotpath_filter_projection"
harness = false
path = "benches/tier1_hotpath_filter_projection.rs"

[[bench]]
name = "tier1_hotpath_search_vector"
harness = false
path = "benches/tier1_hotpath_search_vector.rs"

[[bench]]
name = "tier1_hotpath_pgwire_json"
harness = false
path = "benches/tier1_hotpath_pgwire_json.rs"

[[bench]]
name = "tier1_hotpath_predicates"
harness = false
path = "benches/tier1_hotpath_predicates.rs"

[[bench]]
name = "tier1_hotpath_topk"
harness = false
path = "benches/tier1_hotpath_topk.rs"

[[bench]]
name = "tier1_hotpath_vector_distance"
harness = false
path = "benches/tier1_hotpath_vector_distance.rs"

[[bench]]
name = "tier1_hotpath_bm25"
harness = false
path = "benches/tier1_hotpath_bm25.rs"

[[bench]]
name = "tier2_subsystem_sql_planning"
harness = false
path = "benches/tier2_subsystem_sql_planning.rs"

[[bench]]
name = "tier2_subsystem_parser"
harness = false
path = "benches/tier2_subsystem_parser.rs"

[[bench]]
name = "tier2_subsystem_binder"
harness = false
path = "benches/tier2_subsystem_binder.rs"

[[bench]]
name = "tier2_subsystem_plan_cache"
harness = false
path = "benches/tier2_subsystem_plan_cache.rs"

[[bench]]
name = "tier2_subsystem_search"
harness = false
path = "benches/tier2_subsystem_search.rs"

[[bench]]
name = "tier2_subsystem_vector"
harness = false
path = "benches/tier2_subsystem_vector.rs"

[[bench]]
name = "tier2_subsystem_hybrid"
harness = false
path = "benches/tier2_subsystem_hybrid.rs"

[[bench]]
name = "tier2_subsystem_protocol_handlers"
harness = false
path = "benches/tier2_subsystem_protocol_handlers.rs"

[[bench]]
name = "tier2_subsystem_executor"
harness = false
path = "benches/tier2_subsystem_executor.rs"

[[bench]]
name = "tier2_subsystem_ingest"
harness = false
path = "benches/tier2_subsystem_ingest.rs"

[[bench]]
name = "tier3_system_query"
harness = false
path = "benches/tier3_system_query.rs"

[[bench]]
name = "tier3_system_query_breakdown"
harness = false
path = "benches/tier3_system_query_breakdown.rs"

[[bench]]
name = "tier3_system_startup"
harness = false
path = "benches/tier3_system_startup.rs"

[[bench]]
name = "tier3_system_concurrency"
harness = false
path = "benches/tier3_system_concurrency.rs"

[[bench]]
name = "tier3_system_mixed_load"
harness = false
path = "benches/tier3_system_mixed_load.rs"

[[bench]]
name = "tier3_system_rebuild"
harness = false
path = "benches/tier3_system_rebuild.rs"

[[bench]]
name = "tier4_integration_pgwire"
harness = false
path = "benches/tier4_integration_pgwire.rs"

[[bench]]
name = "tier4_integration_http"
harness = false
path = "benches/tier4_integration_http.rs"

[[bench]]
name = "tier4_integration_protocol_compare"
harness = false
path = "benches/tier4_integration_protocol_compare.rs"

[profile.dev]
opt-level = 0
